5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1721_3066.log
== TEST (2019-05-02 18:13:29) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(inpur("valor sorteado no cubo 2: "))
d3=int(inpur("vallor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar= vidai-dano
print(vidar)
if (vidar>0):
	print("VIVO")
elif (vidar<=0):
	vidar=0
	print("MORTO")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d2=int(inpur("valor sorteado no cubo 2: "))
NameError: name 'inpur' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:13:52) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input"valor sorteado no cubo 2: "))
d3=int(input"vallor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar= vidai-dano
print(vidar)
if (vidar>0):
	print("VIVO")
elif (vidar<=0):
	vidar=0
	print("MORTO")

	
-- ERROR:
File "XXXX", line 3
    d2=int(input"valor sorteado no cubo 2: "))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:14:13) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar= vidai-dano
print(vidar)
if (vidar>0):
	print("VIVO")
elif (vidar<=0):
	vidar=0
	print("MORTO")

	
-- OUTPUT:
-130.0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:15:49) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar= vidai-dano
print(vidar)
if (vidar>0):
	print("VIVO")
elif (vidar<=0):
	vidar==0
	print("MORTO")

	
-- OUTPUT:
-130.0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:17:34) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
if (vida>dano):
	vidar=vidai-dano
	print(vidar)
	print("VIVO")
elif (vidar<dano):
	vidar==0
	print(vidar)
	print("MORTO")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (vida>dano):
NameError: name 'vida' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:18:18) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
if (vidai>dano):
	vidar=vidai-dano
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar==0
	print(vidar)
	print("MORTO")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    vidar==0
NameError: name 'vidar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:19:04) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano):
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar==0
	print("MORTO")

	
-- OUTPUT:
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:19:37) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
print(vidar)
if (vidai>dano):
	print("VIVO")
elif (vidai<dano):
	vidar==0
	print("MORTO")

	
-- OUTPUT:
-130.0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:20:12) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano):
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar==0
	print(vidar)
	print("MORTO")
-- OUTPUT:
-130.0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:20:22) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano):
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar=0
	print(vidar)
	print("MORTO")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:20:30) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano):
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar=0
	print(vidar)
	print("MORTO")
-- EXECUTION TIME:
0.177711
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
0
MORTO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
0
MORTO
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210.0
VIVO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:22:22) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano) and d1<=12 and d2<=12 and d3<=12
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar=0
	print(vidar)
	print("MORTO")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 8
    if (vidai>dano) and d1<=12 and d2<=12 and d3<=12
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:23:20) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano and d1<=12 and d2<=12 and d3<=12)
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar=0
	print(vidar)
	print("MORTO")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 8
    if (vidai>dano and d1<=12 and d2<=12 and d3<=12)
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:23:24) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano and d1<=12 and d2<=12 and d3<=12):
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar=0
	print(vidar)
	print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:23:31) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano and d1<=12 and d2<=12 and d3<=12):
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar=0
	print(vidar)
	print("MORTO")
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.182244
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
0
MORTO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
0
MORTO
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210.0
VIVO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:23:34) 
-- CODE:
vidai=float(input("A quantidade de vida inicial de um personagem? "))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano and d1<=12 and d2<=12 and d3<=12):
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar=0
	print(vidar)
	print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:24:36) 
-- CODE:
vidai=int(input("quantidade inicial de vida de um personagem"))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano and d1<=12 and d2<=12 and d3<=12):
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar=0
	print(vidar)
	print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:24:49) 
-- CODE:
vidai=int(input("quantidade inicial de vida de um personagem"))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano and d1<=12 and d2<=12 and d3<=12):
	print(vidar)
	print("VIVO")
elif (vidai<dano):
	vidar=0
	print(vidar)
	print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:25:34) 
-- CODE:
vidai=int(input("quantidade inicial de vida de um personagem"))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano and d1<=12 and d2<=12 and d3<=12):
	print(vidar)
	print("VIVO")
elif (vidai<dano and d1<=12 and d2<=12 and d3<=12):
	vidar=0
	print(vidar)
	print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:25:48) 
-- CODE:
vidai=int(input("quantidade inicial de vida de um personagem"))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano and d1<=12 and d2<=12 and d3<=12):
	print(vidar)
	print("VIVO")
elif (vidai<dano and d1<=12 and d2<=12 and d3<=12):
	vidar=0
	print(vidar)
	print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:25:55) 
-- CODE:
vidai=int(input("quantidade inicial de vida de um personagem"))
d1=int(input("valor sorteado no cubo 1: "))
d2=int(input("valor sorteado no cubo 2: "))
d3=int(input("valor sorteado no cubop3: "))
n= d1+d2+d3
dano= 10*n
vidar=vidai-dano
if (vidai>dano and d1<=12 and d2<=12 and d3<=12):
	print(vidar)
	print("VIVO")
elif (vidai<dano and d1<=12 and d2<=12 and d3<=12):
	vidar=0
	print(vidar)
	print("MORTO")
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.138263
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
0
MORTO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210
VIVO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
